--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,9 +1,9 @@
 pipeline {
-    agent any
+    agent any 
     stages {
-        stage('build') {
+        stage('Stage 1') {
             steps {
-                cmd 'mvn --version'
+                echo 'Hello world!' 
             }
         }
     }
